// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Remove /> should render when [show=false] 1`] = `
<RemoveModal
  name="Foo"
  noun="OTU"
  onConfirm={[Function]}
  onHide={[MockFunction]}
  show={false}
/>
`;

exports[`<Remove /> should render when [show=true] 1`] = `
<RemoveModal
  name="Foo"
  noun="OTU"
  onConfirm={[Function]}
  onHide={[MockFunction]}
  show={true}
/>
`;
